--- a/package.json
+++ b/package.json
@@ -1,88 +1,77 @@
 {
-  "name": "my-webservice-express",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "postinstall": "typings i",
-    "start": "npm run build && npm run watch",
-    "build": "npm run build-ts && npm run tslint",
-    "serve": "node dist/server.js",
-    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"nodemon dist/server.js\"",
-    "test": "jest --forceExit",
-    "build-ts": "tsc",
-    "watch-ts": "tsc -w",
-    "tslint": "tslint -c tslint.json -p tsconfig.json",
-    "copy-static-assets": "node copyStaticAssets.js",
-    "tsc": "tsc"
-  },
-  "author": "HenryQRM",
-  "license": "ISC",
-  "dependencies": {
-    "@types/compression": "0.0.33",
-    "@types/cors": "^2.8.1",
-    "@types/helmet": "0.0.35",
-    "@types/method-override": "0.0.29",
-    "body-parser": "^1.17.2",
-    "boom": "^5.1.0",
-    "compression": "^1.6.2",
-    "connect-timeout": "^1.9.0",
-    "cors": "^2.8.3",
-    "debug": "^2.6.8",
-    "errorhandler": "^1.5.0",
-    "express": "^4.15.3",
-    "express-joi-validator": "^2.0.0",
-    "extend": "^3.0.1",
-    "helmet": "^3.6.1",
-    "joi": "^10.5.2",
-    "joi-objectid": "^2.0.0",
-    "lodash": "^4.17.4",
-    "lusca": "^1.4.1",
-    "method-override": "^2.3.9",
-    "moment": "^2.18.1",
-    "mongoose": "^4.10.4",
-    "morgan": "^1.8.2",
-    "response-time": "^2.3.2",
-    "winston": "^2.3.1"
-  },
-  "devDependencies": {
-    "@types/async": "^2.0.40",
-    "@types/body-parser": "^1.16.2",
-    "@types/connect-mongo": "0.0.32",
-    "@types/dotenv": "^2.0.20",
-    "@types/errorhandler": "0.0.30",
-    "@types/express": "^4.0.35",
-    "@types/express-session": "0.0.32",
-    "@types/jest": "^19.2.2",
-    "@types/joi": "^10.4.0",
-    "@types/jquery": "^2.0.41",
-    "@types/lodash": "^4.14.63",
-    "@types/mongodb": "^2.2.3",
-    "@types/mongoose": "^4.7.9",
-    "@types/morgan": "^1.7.32",
-    "@types/node": "^7.0.12",
-    "@types/nodemailer": "^1.3.32",
-    "@types/passport": "^0.3.3",
-    "@types/passport-facebook": "^2.1.3",
-    "@types/request": "0.0.42",
-    "@types/supertest": "^2.0.0",
-    "awesome-typescript-loader": "^3.1.3",
-    "concurrently": "^3.4.0",
-    "gulp": "^3.9.1",
-    "gulp-env": "^0.4.0",
-    "gulp-mocha": "^4.3.1",
-    "gulp-rimraf": "^0.2.1",
-    "gulp-shell": "^0.6.3",
-    "gulp-tslint": "^8.1.1",
-    "jest": "^19.0.2",
-    "json-loader": "^0.5.4",
-    "node-sass": "^4.5.2",
-    "nodemon": "^1.11.0",
-    "shelljs": "^0.7.7",
-    "supertest": "^2.0.1",
-    "ts-jest": "^19.0.8",
-    "tslint": "^5.0.0",
-    "typescript": "^2.3.4",
-    "webpack": "^2.6.1"
-  }
+    "name": "my-webservice-express",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "npm run build && npm run watch",
+        "build": "npm run build-ts && npm run tslint && npm run copy-static",
+        "serve": "node dist/server.js",
+        "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"nodemon dist/server.js\"",
+        "test": "jest --forceExit",
+        "build-ts": "tsc",
+        "watch-ts": "tsc -w",
+        "tslint": "tslint -c tslint.json -p tsconfig.json",
+        "copy-static": "node copyStatic.js"
+    },
+    "author": "HenryQRM",
+    "license": "MIT",
+    "dependencies": {
+        "@types/compression": "0.0.33",
+        "@types/cors": "^2.8.1",
+        "@types/helmet": "0.0.35",
+        "@types/method-override": "0.0.29",
+        "body-parser": "^1.17.2",
+        "boom": "^5.1.0",
+        "compression": "^1.6.2",
+        "connect-timeout": "^1.9.0",
+        "cors": "^2.8.3",
+        "debug": "^2.6.8",
+        "errorhandler": "^1.5.0",
+        "express": "^4.15.3",
+        "express-joi-validator": "^2.0.0",
+        "extend": "^3.0.1",
+        "helmet": "^3.6.1",
+        "joi": "^10.5.2",
+        "joi-objectid": "^2.0.0",
+        "lodash": "^4.17.4",
+        "lusca": "^1.4.1",
+        "method-override": "^2.3.9",
+        "moment": "^2.18.1",
+        "mongoose": "^4.10.4",
+        "morgan": "^1.8.2",
+        "response-time": "^2.3.2",
+        "winston": "^2.3.1"
+    },
+    "devDependencies": {
+        "@types/async": "^2.0.40",
+        "@types/body-parser": "^1.16.2",
+        "@types/connect-mongo": "0.0.32",
+        "@types/dotenv": "^2.0.20",
+        "@types/errorhandler": "0.0.30",
+        "@types/express": "^4.0.35",
+        "@types/express-session": "0.0.32",
+        "@types/jest": "^19.2.2",
+        "@types/joi": "^10.4.0",
+        "@types/jquery": "^2.0.41",
+        "@types/lodash": "^4.14.63",
+        "@types/mongodb": "^2.2.3",
+        "@types/mongoose": "^4.7.9",
+        "@types/morgan": "^1.7.32",
+        "@types/node": "^7.0.12",
+        "@types/nodemailer": "^1.3.32",
+        "@types/passport": "^0.3.3",
+        "@types/passport-facebook": "^2.1.3",
+        "@types/request": "0.0.42",
+        "@types/supertest": "^2.0.0",
+        "concurrently": "^3.4.0",
+        "jest": "^19.0.2",
+        "nodemon": "^1.11.0",
+        "shelljs": "^0.7.7",
+        "supertest": "^2.0.1",
+        "ts-jest": "^19.0.8",
+        "tslint": "^5.0.0",
+        "typescript": "^2.2.2",
+        "json-loader": "^0.5.4"
+    }
 }
