--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,10 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es6",
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
         "noImplicitAny": true,
+        "removeComments": true,
         "moduleResolution": "node",
         "sourceMap": true,
         "typeRoots": ["node_modules/@types"],
