--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,15 +3,16 @@
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
-    "configurations": [
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "Launch Program",
-            "program": "${file}",
-            "outFiles": [
-                "${workspaceRoot}/out/**/*.js"
-            ]
-        }
-    ]
+    "configurations": [{
+        "type": "node",
+        "request": "launch",
+        "name": "Debug",
+        "program": "${workspaceRoot}/dist/server.js",
+        "smartStep": true,
+        "outFiles": [
+            "../dist/**/*.js"
+        ],
+        "preLaunchTask": "build",
+        "protocol": "inspector"
+    }]
 }
