--- a/package.json
+++ b/package.json
@@ -17,10 +17,6 @@
     "author": "HenryQRM",
     "license": "MIT",
     "dependencies": {
-        "@types/compression": "0.0.33",
-        "@types/cors": "^2.8.1",
-        "@types/helmet": "0.0.35",
-        "@types/method-override": "0.0.29",
         "body-parser": "^1.17.2",
         "boom": "^5.1.0",
         "compression": "^1.6.2",
@@ -46,15 +42,20 @@
     "devDependencies": {
         "@types/async": "^2.0.40",
         "@types/body-parser": "^1.16.2",
+        "@types/boom": "^4.3.5",
+        "@types/compression": "0.0.33",
         "@types/connect-mongo": "0.0.32",
+        "@types/cors": "^2.8.1",
         "@types/dotenv": "^2.0.20",
         "@types/errorhandler": "0.0.30",
         "@types/express": "^4.0.35",
         "@types/express-session": "0.0.32",
+        "@types/helmet": "0.0.35",
         "@types/jest": "^19.2.2",
         "@types/joi": "^10.4.0",
         "@types/jquery": "^2.0.41",
         "@types/lodash": "^4.14.63",
+        "@types/method-override": "0.0.29",
         "@types/mongodb": "^2.2.3",
         "@types/mongoose": "^4.7.9",
         "@types/morgan": "^1.7.32",
@@ -66,12 +67,12 @@
         "@types/supertest": "^2.0.0",
         "concurrently": "^3.4.0",
         "jest": "^19.0.2",
+        "json-loader": "^0.5.4",
         "nodemon": "^1.11.0",
         "shelljs": "^0.7.7",
         "supertest": "^2.0.1",
         "ts-jest": "^19.0.8",
         "tslint": "^5.0.0",
-        "typescript": "^2.2.2",
-        "json-loader": "^0.5.4"
+        "typescript": "^2.2.2"
     }
 }
