--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "es6",
+        "target": "es2017",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "noImplicitAny": true,
         "removeComments": true,
         "moduleResolution": "node",
-        "sourceMap": true,
+        "sourceMap": false,
         "typeRoots": ["node_modules/@types"],
         "outDir": "dist",
         "baseUrl": ".",
