--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "npm run build && npm run watch",
         "build": "npm run build-ts && npm run tslint && npm run copy-static",
         "serve": "node dist/server.js",
-        "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"nodemon dist/server.js\"",
+        "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"nodemon dist\"",
         "test": "jest --forceExit",
         "build-ts": "tsc",
         "watch-ts": "tsc -w",
@@ -37,6 +37,7 @@
         "mongoose": "^4.10.4",
         "morgan": "^1.8.2",
         "response-time": "^2.3.2",
+        "swagger-jsdoc": "^1.9.4",
         "winston": "^2.3.1"
     },
     "devDependencies": {
