--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,9 @@
 {
     "search.exclude": {
         "**/node_modules": true,
-        "**/bower_components": true,
         "**/dist": true
     },
-    "typescript.referencesCodeLens.enabled": false,
+    "typescript.referencesCodeLens.enabled": true,
     "tslint.ignoreDefinitionFiles": false,
     "tslint.autoFixOnSave": true,
     "tslint.exclude": "**/node_modules/**/*",
