--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "npm run build && npm run watch",
-        "build": "npm run build-ts && npm run tslint && npm run copy-static",
+        "build": "npm run build-ts && npm run tslint",
         "serve": "node dist/server.js",
         "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"nodemon dist\"",
         "test": "jest --forceExit",
@@ -23,7 +23,6 @@
         "connect-timeout": "^1.9.0",
         "cors": "^2.8.3",
         "debug": "^2.6.8",
-        "errorhandler": "^1.5.0",
         "express": "^4.15.3",
         "express-joi-validator": "^2.0.0",
         "extend": "^3.0.1",
@@ -66,6 +65,8 @@
         "@types/passport-facebook": "^2.1.3",
         "@types/request": "0.0.42",
         "@types/supertest": "^2.0.0",
+        "chai": "^4.0.2",
+        "chai-http": "^3.0.0",
         "concurrently": "^3.4.0",
         "jest": "^19.0.2",
         "json-loader": "^0.5.4",
@@ -74,6 +75,10 @@
         "supertest": "^2.0.1",
         "ts-jest": "^19.0.8",
         "tslint": "^5.0.0",
-        "typescript": "^2.2.2"
+        "typescript": "^2.2.2",
+        "webpack": "^2.6.1"
+    },
+    "engines": {
+        "node": "8.*"
     }
 }
