--- a/package.json
+++ b/package.json
@@ -75,8 +75,7 @@
         "supertest": "^2.0.1",
         "ts-jest": "^19.0.8",
         "tslint": "^5.0.0",
-        "typescript": "^2.2.2",
-        "webpack": "^2.6.1"
+        "typescript": "^2.2.2"
     },
     "engines": {
         "node": "8.*"
