--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "start": "npm run build && npm run watch",
         "build": "npm run build-ts && npm run tslint",
+        "uglify": "uglifyjs dist/**/*.js > build/index.js",
         "serve": "node dist/server.js",
         "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"nodemon dist\"",
         "test": "jest --forceExit",
@@ -17,24 +18,33 @@
     "author": "HenryQRM",
     "license": "MIT",
     "dependencies": {
+        "@types/express-jwt": "0.0.35",
+        "@types/jsonwebtoken": "^7.2.1",
+        "@types/passport-local": "^1.0.30",
         "body-parser": "^1.17.2",
         "boom": "^5.1.0",
+        "composable-middleware": "^0.3.0",
         "compression": "^1.6.2",
         "connect-timeout": "^1.9.0",
         "cors": "^2.8.3",
         "debug": "^2.6.8",
         "express": "^4.15.3",
         "express-joi-validator": "^2.0.0",
+        "express-jwt": "^5.3.0",
         "extend": "^3.0.1",
         "helmet": "^3.6.1",
         "joi": "^10.5.2",
         "joi-objectid": "^2.0.0",
+        "jsonwebtoken": "^7.4.1",
         "lodash": "^4.17.4",
         "lusca": "^1.4.1",
         "method-override": "^2.3.9",
         "moment": "^2.18.1",
         "mongoose": "^4.10.4",
         "morgan": "^1.8.2",
+        "passport": "^0.3.2",
+        "passport-local": "^1.0.0",
+        "passport-oauth2": "^1.4.0",
         "response-time": "^2.3.2",
         "swagger-jsdoc": "^1.9.4",
         "winston": "^2.3.1"
