--- a/package.json
+++ b/package.json
@@ -1,93 +1,102 @@
 {
-    "name": "my-webservice-express",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "npm run build && npm run watch",
-        "build": "npm run build-ts && npm run tslint",
-        "uglify": "uglifyjs dist/**/*.js > build/index.js",
-        "serve": "node dist/server.js",
-        "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"nodemon dist\"",
-        "test": "jest --forceExit",
-        "build-ts": "tsc",
-        "watch-ts": "tsc -w",
-        "tslint": "tslint -c tslint.json -p tsconfig.json",
-        "copy-static": "node copyStatic.js"
-    },
-    "author": "HenryQRM",
-    "license": "MIT",
-    "dependencies": {
-        "@types/express-jwt": "0.0.35",
-        "@types/jsonwebtoken": "^7.2.1",
-        "@types/passport-local": "^1.0.30",
-        "body-parser": "^1.17.2",
-        "boom": "^5.1.0",
-        "composable-middleware": "^0.3.0",
-        "compression": "^1.6.2",
-        "connect-timeout": "^1.9.0",
-        "cors": "^2.8.3",
-        "debug": "^2.6.8",
-        "express": "^4.15.3",
-        "express-joi-validator": "^2.0.0",
-        "express-jwt": "^5.3.0",
-        "extend": "^3.0.1",
-        "helmet": "^3.6.1",
-        "joi": "^10.5.2",
-        "joi-objectid": "^2.0.0",
-        "jsonwebtoken": "^7.4.1",
-        "lodash": "^4.17.4",
-        "lusca": "^1.4.1",
-        "method-override": "^2.3.9",
-        "moment": "^2.18.1",
-        "mongoose": "^4.10.4",
-        "morgan": "^1.8.2",
-        "passport": "^0.3.2",
-        "passport-local": "^1.0.0",
-        "passport-oauth2": "^1.4.0",
-        "response-time": "^2.3.2",
-        "swagger-jsdoc": "^1.9.4",
-        "winston": "^2.3.1"
-    },
-    "devDependencies": {
-        "@types/async": "^2.0.40",
-        "@types/body-parser": "^1.16.2",
-        "@types/boom": "^4.3.5",
-        "@types/compression": "0.0.33",
-        "@types/connect-mongo": "0.0.32",
-        "@types/cors": "^2.8.1",
-        "@types/dotenv": "^2.0.20",
-        "@types/errorhandler": "0.0.30",
-        "@types/express": "^4.0.35",
-        "@types/express-session": "0.0.32",
-        "@types/helmet": "0.0.35",
-        "@types/jest": "^19.2.2",
-        "@types/joi": "^10.4.0",
-        "@types/jquery": "^2.0.41",
-        "@types/lodash": "^4.14.63",
-        "@types/method-override": "0.0.29",
-        "@types/mongodb": "^2.2.3",
-        "@types/mongoose": "^4.7.9",
-        "@types/morgan": "^1.7.32",
-        "@types/node": "^7.0.12",
-        "@types/nodemailer": "^1.3.32",
-        "@types/passport": "^0.3.3",
-        "@types/passport-facebook": "^2.1.3",
-        "@types/request": "0.0.42",
-        "@types/supertest": "^2.0.0",
-        "chai": "^4.0.2",
-        "chai-http": "^3.0.0",
-        "concurrently": "^3.4.0",
-        "jest": "^19.0.2",
-        "json-loader": "^0.5.4",
-        "nodemon": "^1.11.0",
-        "shelljs": "^0.7.7",
-        "supertest": "^2.0.1",
-        "ts-jest": "^19.0.8",
-        "tslint": "^5.0.0",
-        "typescript": "^2.2.2"
-    },
-    "engines": {
-        "node": "8.*"
-    }
+  "name": "my-webservice-express",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "npm run build && npm run watch",
+    "build": "npm run build-ts && npm run tslint",
+    "serve": "node dist/server.js",
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"nodemon dist\"",
+    "test": "jest --forceExit",
+    "build-ts": "tsc",
+    "watch-ts": "tsc -w",
+    "tslint": "tslint -c tslint.json -p tsconfig.json",
+    "copy-static": "node copyStatic.js"
+  },
+  "author": "HenryQRM",
+  "license": "MIT",
+  "dependencies": {
+    "async": "^2.4.1",
+    "body-parser": "^1.17.2",
+    "boom": "^5.1.0",
+    "composable-middleware": "^0.3.0",
+    "compression": "^1.6.2",
+    "connect-timeout": "^1.9.0",
+    "cors": "^2.8.3",
+    "debug": "^2.6.8",
+    "express": "^4.15.3",
+    "express-joi-validator": "^2.0.0",
+    "express-jwt": "^5.3.0",
+    "extend": "^3.0.1",
+    "helmet": "^3.6.1",
+    "joi": "^10.5.2",
+    "joi-objectid": "^2.0.0",
+    "jsonwebtoken": "^7.4.1",
+    "lodash": "^4.17.4",
+    "lusca": "^1.4.1",
+    "method-override": "^2.3.9",
+    "moment": "^2.18.1",
+    "mongoose": "^4.10.4",
+    "morgan": "^1.8.2",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
+    "response-time": "^2.3.2",
+    "swagger-jsdoc": "^1.9.4",
+    "winston": "^2.3.1"
+  },
+  "devDependencies": {
+    "@types/async": "^2.0.40",
+    "@types/body-parser": "^1.16.2",
+    "@types/boom": "^4.3.5",
+    "@types/compression": "0.0.33",
+    "@types/connect-mongo": "0.0.32",
+    "@types/cors": "^2.8.1",
+    "@types/dotenv": "^2.0.20",
+    "@types/errorhandler": "0.0.30",
+    "@types/express": "^4.0.35",
+    "@types/express-jwt": "0.0.35",
+    "@types/express-session": "0.0.32",
+    "@types/helmet": "0.0.35",
+    "@types/jest": "^19.2.2",
+    "@types/joi": "^10.4.0",
+    "@types/jquery": "^2.0.41",
+    "@types/jsonwebtoken": "^7.2.1",
+    "@types/lodash": "^4.14.63",
+    "@types/method-override": "0.0.29",
+    "@types/mongodb": "^2.2.3",
+    "@types/mongoose": "^4.7.9",
+    "@types/morgan": "^1.7.32",
+    "@types/node": "^7.0.12",
+    "@types/nodemailer": "^1.3.32",
+    "@types/passport": "^0.3.3",
+    "@types/passport-facebook": "^2.1.3",
+    "@types/passport-local": "^1.0.30",
+    "@types/request": "0.0.42",
+    "@types/supertest": "^2.0.0",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.0",
+    "babel-plugin-lodash": "^3.2.11",
+    "babel-preset-env": "^1.5.2",
+    "babel-preset-es2015": "^6.24.1",
+    "chai": "^4.0.2",
+    "chai-http": "^3.0.0",
+    "concurrently": "^3.4.0",
+    "jest": "^19.0.2",
+    "json-loader": "^0.5.4",
+    "lodash-webpack-plugin": "^0.11.4",
+    "nodemon": "^1.11.0",
+    "optimize-js-plugin": "0.0.4",
+    "shelljs": "^0.7.7",
+    "supertest": "^2.0.1",
+    "ts-jest": "^19.0.8",
+    "tslint": "^5.0.0",
+    "typescript": "^2.2.2",
+    "uglify-es-webpack-plugin": "0.0.2",
+    "webpack": "^3.0.0",
+    "webpack-node-externals": "^1.6.0"
+  },
+  "engines": {
+    "node": "8.*"
+  }
 }
