--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "async": "^2.4.1",
+    "bluebird": "^3.5.0",
     "body-parser": "^1.17.2",
     "boom": "^5.1.0",
     "composable-middleware": "^0.3.0",
@@ -53,7 +54,6 @@
     "@types/connect-mongo": "0.0.32",
     "@types/cors": "^2.8.1",
     "@types/dotenv": "^2.0.20",
-    "@types/errorhandler": "0.0.30",
     "@types/express": "^4.0.35",
     "@types/express-jwt": "0.0.35",
     "@types/express-session": "0.0.32",
